--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Scoots - Scooter Rentals | Home Page</title>
+    <link rel="icon" href="favicon.ico">
+    <meta name="author" content="Jason K Gibson">
+    <meta name="description" content="Your home for the best rentals in Cozumel. Scooters | Jeeps | Side-by-Sides">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+    <meta property="og:title" content="Jason K Gibson - WDD 230 - Scoots Concept">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://gibsonjk1.github.io/wdd230/scoots/images/motor_scooter.png">
+    <meta property="og:url" content="https://gibsonjk1.github.io/wdd230/scoots">
+    <meta property="og:description" content="Welcome to your home for the best rentals in Cozumel">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
+    <header>
+        <div class="header-iden">
+            <div class="header-title">
+                <h1>Scoots Rentals</h1>
+            </div>
+            <img src="images/logo.png" alt="Scoots Rentals Logo">
+            <div class="header-phrase">
+                <p>Cozumels Best Rentals</p>
+                <p>"Scoot into Adventure!"</p>
+            </div>
+        </div>
+        <button id="hamburger"></button>
+        <nav>
+            <ul id="nav" class="closed">
+                <li class="l1"><a href="index.html">Home</a></li>
+                <li class="l2"><a href="rentals.html" class="active-nav">Rentals</a></li>
+                <li class="r1"><a href="reservations.html">Reservations</a></li>
+                <li class="r2"><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+        <p>5a Av. Nte. entre calle 2 norte y 4 norte, Centro, 77668 Cozumel, Q.R., Mexico</p>
+        <p>Phone: 123-456-7890</p>
+        <p>© Jason K Gibson | 2024</p>
+        <a href="references.html">references</a>
+
+    </footer>
+    <script src="scripts/hamburger.js"></script>
 </body>
 
 </html>
