--- a/scoots/index.html
+++ b/scoots/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <div id="greyed" class="closed"></div>
     <header>
         <div class="header-iden">
             <div class="header-title">
@@ -37,11 +38,11 @@
         </div>
         <button id="hamburger"></button>
         <nav>
-            <ul id="nav" class="closed">
-                <li class="l1"><a href="index.html" class="active-nav">Home</a></li>
+            <ul id="nav">
+                <li class="l1"><a href="index.html">Home</a></li>
                 <li class="l2"><a href="rentals.html">Rentals</a></li>
                 <li class="r1"><a href="reservations.html">Reservations</a></li>
-                <li class="r2"><a href="contact.html">Contact Us</a></li>
+                <li class="r2"><a href="contact.html" class="active-nav">Contact Us</a></li>
             </ul>
         </nav>
     </header>
