--- a/scoots/references.html
+++ b/scoots/references.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <div id="greyed" class="closed"></div>
     <header>
         <div class="header-iden">
             <div class="header-title">
@@ -37,11 +38,11 @@
         </div>
         <button id="hamburger"></button>
         <nav>
-            <ul id="nav" class="closed">
+            <ul id="nav">
                 <li class="l1"><a href="index.html">Home</a></li>
                 <li class="l2"><a href="rentals.html">Rentals</a></li>
                 <li class="r1"><a href="reservations.html">Reservations</a></li>
-                <li class="r2"><a href="contact.html">Contact Us</a></li>
+                <li class="r2"><a href="contact.html" class="active-nav">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -50,6 +51,7 @@
         <a target="_blank" href="https://icons8.com/icon/YfCbGWCWcuar/twitterx">X</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/118467/facebook">Facebook Logo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
         <a target="_blank" href="https://icons8.com/icon/32292/instagram">Instagram Logo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        <p>images from</p> <a href="www.pexels.com">pexels.com</a>
     </main>
     <footer>
         <p>5a Av. Nte. entre calle 2 norte y 4 norte, Centro, 77668 Cozumel, Q.R., Mexico</p>
