--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Your home for the best rentals in Cozumel. Scooters | Jeeps | Side-by-Sides">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <meta property="og:title" content="Jason K Gibson - WDD 230 - Scoots Concept">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://gibsonjk1.github.io/wdd230/scoots/images/motor_scooter.png">
@@ -31,18 +31,14 @@
                 <h1>Scoots Rentals</h1>
             </div>
             <img src="images/logo.png" alt="Scoots Rentals Logo">
-            <div class="header-phrase">
-                <p>Cozumels Best Rentals</p>
-                <p>"Scoot into Adventure!"</p>
-            </div>
         </div>
-        <button id="hamburger"></button>
+        <button id="hamburger" class="notopen"></button>
         <nav>
-            <ul id="nav">
+            <ul id="nav" class="notopen">
                 <li class="l1"><a href="index.html">Home</a></li>
                 <li class="l2"><a href="rentals.html">Rentals</a></li>
-                <li class="r1"><a href="reservations.html">Reservations</a></li>
-                <li class="r2"><a href="contact.html" class="active-nav">Contact Us</a></li>
+                <li class="r1"><a href="reservations.html">Reserve</a></li>
+                <li class="r2"><a href="contact.html" class="active-nav">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -54,12 +50,8 @@
         </div>
         <div class="contact">
             <h1>Contact Us</h1>
-            <h2>Phone</h2>
-            <hr>
-            <p>123-456-7890</p>
-            <h2>Address</h2>
-            <hr>
-            <p>We have two locations:</p>
+            <h2>Phone: 123-456-7890</h2>
+            <h2>Address (Two Locations):</h2>
             <ul>
                 <li>5a Av. Nte. entre calle 2 norte y 4 norte, Centro, 77668 Cozumel, Q.R., Mexico</li>
                 <p>(Near Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel)</p>
@@ -67,15 +59,12 @@
                 <p>(near the Terminal Puerta Maya)</p>
             </ul>
 
-
-
-
-
             <h2>Send us a message</h2>
             <form action="thanks.html" class="form1">
                 <label>Name: <input type="text" required id="contact-name" name="contact-name"></label>
                 <label>Email: <input type="email" required id="contact-email" name="contact-email"></label>
                 <label>Message: <textarea name="contact-message" id="contact-message" cols="30" rows="5"></textarea></label>
+                <label> <input type="submit" name="sendmessage" value="Send your message"></label>
             </form>
             <p></p>
         </div>
