--- a/scoots/references.html
+++ b/scoots/references.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Your home for the best rentals in Cozumel. Scooters | Jeeps | Side-by-Sides">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <meta property="og:title" content="Jason K Gibson - WDD 230 - Scoots Concept">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://gibsonjk1.github.io/wdd230/scoots/images/motor_scooter.png">
@@ -31,27 +31,35 @@
                 <h1>Scoots Rentals</h1>
             </div>
             <img src="images/logo.png" alt="Scoots Rentals Logo">
-            <div class="header-phrase">
-                <p>Cozumels Best Rentals</p>
-                <p>"Scoot into Adventure!"</p>
-            </div>
         </div>
-        <button id="hamburger"></button>
+        <button id="hamburger" class="notopen"></button>
         <nav>
-            <ul id="nav">
+            <ul id="nav" class="notopen">
                 <li class="l1"><a href="index.html">Home</a></li>
                 <li class="l2"><a href="rentals.html">Rentals</a></li>
-                <li class="r1"><a href="reservations.html">Reservations</a></li>
-                <li class="r2"><a href="contact.html" class="active-nav">Contact Us</a></li>
+                <li class="r1"><a href="reservations.html">Reserve</a></li>
+                <li class="r2"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <p>Logo from Design.com</p>
-        <a target="_blank" href="https://icons8.com/icon/YfCbGWCWcuar/twitterx">X</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/118467/facebook">Facebook Logo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-        <a target="_blank" href="https://icons8.com/icon/32292/instagram">Instagram Logo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-        <p>images from</p> <a href="www.pexels.com">pexels.com</a>
+        <ul>
+            <li>
+                Logo from Design.com
+            </li>
+            <li><a target="_blank" href="https://icons8.com/icon/YfCbGWCWcuar/twitterx">X</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+            <li><a target="_blank" href="https://icons8.com/icon/118467/facebook">Facebook Logo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+            <li><a target="_blank" href="https://icons8.com/icon/32292/instagram">Instagram Logo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+            <li>
+                most images from <a href="www.pexels.com">pexels.com</a>
+            </li>
+            <li>images on the rentals page were taken from various honda websites</li>
+            <li>weather from openweather api</li>
+            <li>map is from google maps</li>
+
+
+
+        </ul>
     </main>
     <footer>
         <p>5a Av. Nte. entre calle 2 norte y 4 norte, Centro, 77668 Cozumel, Q.R., Mexico</p>
