--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Your home for the best rentals in Cozumel. Scooters | Jeeps | Side-by-Sides">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <meta property="og:title" content="Jason K Gibson - WDD 230 - Scoots Concept">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://gibsonjk1.github.io/wdd230/scoots/images/motor_scooter.png">
@@ -31,18 +31,14 @@
                 <h1>Scoots Rentals</h1>
             </div>
             <img src="images/logo.png" alt="Scoots Rentals Logo">
-            <div class="header-phrase">
-                <p>Cozumels Best Rentals</p>
-                <p>"Scoot into Adventure!"</p>
-            </div>
         </div>
         <button id="hamburger" class="notopen"></button>
         <nav>
             <ul id="nav" class="notopen">
                 <li class="l1"><a href="index.html">Home</a></li>
-                <li class="l2"><a href="rentals.html">Rentals</a></li>
-                <li class="r1"><a href="reservations.html">Reservations</a></li>
-                <li class="r2"><a href="contact.html" class="active-nav">Contact</a></li>
+                <li class="l2"><a href="rentals.html" class="active-nav">Rentals</a></li>
+                <li class="r1"><a href="reservations.html">Reserve</a></li>
+                <li class="r2"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
