--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -46,17 +46,23 @@
         <div class="spacer"></div>
         <div class="maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31270.146388166704!2d-86.98514091561692!3d20.489863261360455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e57491a71c81d%3A0x6933058e58e0ee3d!2sPuerta%20Maya%20Cruise%20Ship%20Maritime%20Terminal!5e0!3m2!1sen!2sus!4v1734056799389!5m2!1sen!2sus"
-                width="600" height="450" allowfullscreen="false" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                width="600" height="450" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="contact">
             <h1>Contact Us</h1>
             <h2>Phone: 123-456-7890</h2>
             <h2>Address (Two Locations):</h2>
             <ul>
-                <li>5a Av. Nte. entre calle 2 norte y 4 norte, Centro, 77668 Cozumel, Q.R., Mexico</li>
-                <p>(Near Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel)</p>
-                <li>Royal Village Shopping Center, Av. Rafael E. Melgar Local 53, 77675 Cozumel, Q.R., Mexico</li>
-                <p>(near the Terminal Puerta Maya)</p>
+                <li>5a Av. Nte. entre calle 2 norte y 4 norte, Centro, 77668 Cozumel, Q.R., Mexico
+                    <br>
+                    <p>(Near Playa del Carmen-Cozumel Ferry dock in el Centro de Cozumel)</p>
+                </li>
+
+                <li>Royal Village Shopping Center, Av. Rafael E. Melgar Local 53, 77675 Cozumel, Q.R., Mexico
+                    <br>
+                    <p>(near the Terminal Puerta Maya)</p>
+                </li>
+
             </ul>
 
             <h2>Send us a message</h2>
