--- a/scoots/index.html
+++ b/scoots/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
@@ -49,8 +48,8 @@
         </div>
         <div class="hero">
             <picture>
-                <source media="(min-width: 400px)" srcset="images/hero.jpg">
-                <img src="images/hero.jpg" alt="temple picture" width="960" height="633">
+                <source media="(max-width: 400px)" srcset="images/herosmall.webp">
+                <img src="images/hero.webp" alt="temple picture" width="960" height="633">
             </picture>
             <div class="call-to-action">
                 <a href="./reservations.html">Reserve Now!</a>
