--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
@@ -50,19 +49,19 @@
             <hr>
             <div class="card">
                 <h3>Honda Metropolitan</h3>
-                <img src="images/Metropolitan.png" alt="Honda Metropolitan Scooter">
+                <img src="images/metropolitan.webp" alt="Honda Metropolitan Scooter">
 
                 <a href="reservations.html">Reserve Now</a>
             </div>
             <div class="card">
                 <h3>Honda Dio</h3>
-                <img src="images/dio.png" alt="Honda Dio Scooter">
+                <img src="images/dio.webp" alt="Honda Dio Scooter">
 
                 <a href="reservations.html">Reserve Now</a>
             </div>
             <div class="card">
                 <h3>Honda PCX150</h3>
-                <img src="images/pcx.png" alt="Honda PCX150 Scooter">
+                <img src="images/pcx.webp" alt="Honda PCX150 Scooter">
 
                 <a href="reservations.html">Reserve Now</a>
             </div>
@@ -72,7 +71,7 @@
             <hr>
             <div class="card">
                 <h3>Honda Pioneer</h3>
-                <img src="images/pinoeer.png" alt="Honda Pioneer 1000">
+                <img src="images/pioneer.webp" alt="Honda Pioneer 1000">
 
                 <a href="reservations.html">Reserve Now</a>
             </div>
@@ -82,7 +81,7 @@
             <hr>
             <div class="card">
                 <h3>Jeep Wrangler 2-Door</h3>
-                <img src="images/wrangler-two.jpg" alt="2-Door Jeep Wrangler">
+                <img src="images/wrangler-two.webp" alt="2-Door Jeep Wrangler">
 
                 <a href="reservations.html">Reserve Now</a>
             </div>
